# py-lintro

./: .actrc  .codecov.yml  .darglint  .dockerignore  .gitignore  .gitleaks.toml  .hadolint.yaml  .lintro-config.yaml  .lintro-ignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .pydocstyle  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  DCO.md  DOCKER.md  Dockerfile  Dockerfile.base  Dockerfile.tools  GOVERNANCE.md  MANIFEST.in  Makefile  PR-chore-release-automation-and-renovate.md  README.md  SECURITY.md  STYLE_GUIDE.md  create_venv.sh  cur.txt  docker-compose.yml  install.sh  lintro-docker.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  renovate-turbo-ci.json  renovate.json  report.xml  (+13 more)
.allstar/: allstar.yaml  branch_protection.yaml  outside.yaml
.github/: CODEOWNERS  SECURITY.md  actionlint.yaml  labeler.yml  pull_request_template.md  renovate-pr-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/actions/: README.md
.github/codeql/: codeql-config.yml
.github/data/: cache-config.yml  security-config.yml
.github/workflows/: README.md  auto-bump-internal-refs.yml  auto-tag-on-main.yml  auto-version-actions.yml  build-binary.yml  build-test-pipeline.yml  ci-lintro-analysis.yml  ci-pipeline.yml  ci.yml  codeql.yml  composite-smoke-tests.yml  debug-egress.yml  dependency-review.yml  docker-build-publish.yml  docker.yml  ghcr-cleanup.yml  image-drift-check.yml  infrastructure-health-check.yml  lintro-ci.yml  lintro-docker.yml  lintro-pages.yml  lintro-pr.yml  lintro-renovate.yml  lintro-report-scheduled.yml  lintro-report.yml  lintro-test-coverage.yml  pages-deploy-coverage.yml  pages.yml  pr-auto-assign.yml  pr-comment-cleanup.yml  pr-labeler.yml  publish-pypi-on-tag.yml  publish-pypi.yml  publish-testpypi.yml  release-create.yml  renovate.yml  reusable-build.yml  reusable-quality.yml  reusable-sbom.yml  reusable-setup.yml  (+13 more)
docs/: README.md  configuration.md  contributing.md  coverage-setup.md  docker.md  getting-started.md  github-integration.md  lintro-self-use.md  plugins.md  removed_cli_options.md  style-guide.md  troubleshooting.md
docs/architecture/: ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md
docs/security/: assurance.md
docs/tool-analysis/: README.md  astro-check-analysis.md  cargo-deny-analysis.md  clippy-analysis.md  eslint-analysis.md  hadolint-analysis.md  markdownlint-analysis.md  mypy-analysis.md  oxc-analysis.md  prettier-analysis.md  pydoclint-analysis.md  pytest-analysis.md  svelte-check-analysis.md  tsc-analysis.md  vue-tsc-analysis.md
lintro/: __init__.py  _tool_versions.py  cli.py
lintro/ascii-art/: fail.txt  success.txt
lintro/config/: __init__.py  config_loader.py  execution_config.py  lintro_config.py  tool_config.py  tool_config_generator.py
lintro/enums/: action.py  bandit_levels.py  base.py  env_bool.py  git_command.py  git_ref.py  output_format.py  pytest_enums.py  severity_level.py  tool_name.py  tool_order.py  tool_type.py
lintro/formatters/: __init__.py  formatter.py
lintro/parsers/: __init__.py  base_issue.py  base_parser.py
lintro/plugins/: __init__.py  base.py  discovery.py  execution_preparation.py  file_discovery.py  file_processor.py  registry.py  subprocess_executor.py
lintro/tools/: __init__.py  black.py  darglint.py  flake8.py  hadolint.py  isort.py  manifest.json  mypy.py  prettier.py  pydocstyle.py  pylint.py  semgrep.py  terraform.py  tool_enum.py  yamllint.py
lintro/utils/: async_tool_executor.py  cli_parsing.py  config.py  config_constants.py  config_loaders.py  config_priority.py  config_reporting.py  config_utils.py  console_formatting.py  console_logger.py  console_output_writer.py  display_helpers.py  env.py  executor_helpers.py  formatting.py  json_output.py  logger_setup.py  logging_utils.py  native_parsers.py  node_deps.py  output_formatting.py  output_manager.py  output_writers.py  path_filtering.py  path_utils.py  post_checks.py  result_formatters.py  simple_runner.py  summary_tables.py  table_formatting.py  tool_executor.py  tool_options.py  tool_utils.py  unified_config.py
rules/: add-commits.mdc
scripts/: ORGANIZATION.md  README.md  ci-docker-lintro-analysis.sh  ci-docker-tests.sh  ci-extract-coverage.sh  ci-lintro-analysis.sh  ci-lintro.sh  ci-post-pr-comment.sh  ci-pr-comment.sh  ci-test.sh  coverage-badge-update.sh  coverage-pr-comment.sh  delete-previous-lintro-comments.py  docker-build-test.sh  docker-lintro.sh  docker-test.sh  extract-coverage.py  install-tools.sh  install.sh  lintro-report-generate.sh  local-lintro.sh  local-test.sh  pages-deploy.sh  run-tests.sh  test-coverage-run.sh  utils.sh
scripts/ci/: README.md  auto-tag-check-exists.sh  auto-tag-configure-auth.sh  auto-tag-create-push-tag.sh  auto-tag-detect-previous.sh  auto-tag-read-version.sh  auto-tag-unified.sh  auto-version-actions.sh  bomctl-help-test.sh  bump-internal-refs-entry.sh  bump-internal-refs.sh  ci-auto-fix.sh  ci-extract-coverage.sh  ci-lintro-analysis.sh  ci-lintro.sh  ci-log.sh  ci-post-pr-comment.sh  ci-pr-comment.sh  ci-test.sh  codecov-upload.sh  configure-git-user.sh  coverage-badge-update.sh  coverage-pr-comment.sh  deployments-prune.sh  (+49 more)
test_samples/: .gitignore  .markdownlint.json  README.md  biome_violations.js  comment_body_simple.txt  comment_body_with_quotes.txt  darglint_violations.py  github_comments_no_marker.json  github_comments_paginated.json  github_comments_with_marker.json  hadolint_violations  prettier_violations.js  pytest_clean.py  pytest_failures.py  ruff_black_e501_wrappable.py  ruff_clean.py  ruff_violations.py  yaml_violations.yml
tests/: __init__.py  conftest.py  test_cli.py  test_cli_commands.py  test_cli_commands_advanced.py  test_cli_commands_extended.py  test_cli_coverage.py  test_cli_output.py  test_cli_utils.py  test_documentation.py  test_mypy_integration.py  test_prettier_integration.py  test_ruff_integration.py  test_semgrep_integration.py  test_terraform_integration.py  test_tools.py  test_tools_coverage.py  test_yamllint_integration.py
(+691 files in other folders)
