[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lintro"
version = "0.1.0"
description = "A unified CLI tool for code formatting, linting, and quality assurance"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0,<9.0.0",
    "darglint~=1.8.1",
    "loguru>=0.7.0",
    "tabulate~=0.9.0",
    "yamllint>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "tox>=4.26.0",
    "allure-pytest>=2.14.0",
    "ruff",
    "mypy",
    "coverage-badge>=1.1.2",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
]
typing = [
    "types-setuptools>=80.9.0",
    "types-tabulate>=0.9.0",
]

[project.scripts]
lintro = "lintro.cli:main"

[tool.setuptools]
packages = ["lintro", "lintro.tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]


